poke/testsuite/poke.pkl/offset-type-diag-4.pk
/* { dg-do compile } */

defun foo = (offset<int,XXX> input, /* { dg-error "" } */
             int len) int:
{
    defvar ret = 0;
    return ret;
}
